[package]
name = "qrotd"
version = "0.1.0"
authors = ["PointyFluff <60830984+PointyFluff@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrcode = "0.12.0"
image = "0.23.12" 
structopt = "0.3.21"
